my-web/templates/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: my-web-service
spec:
  type: ClusterIP
  selector:
    app: my-web
  ports:
    - port: 80
      targetPort: 80
